# CppTools

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  compile_commands.json  doxygen.conf  list.todo
.github/workflows/: cmake-multi-platform.yml
cmake/: cpptools-config.config.cmake
cpptools/: CMakeLists.txt  api.hpp  cpptools.config.cpp  enum_map.hpp  hash_combine.hpp  iterable_tools.hpp  lambda_maker.hpp  make_basic_exception.hpp  map_tools.hpp  notifier.hpp  sine_generator.hpp  string_tools.cpp  string_tools.hpp  tree.hpp  tree_node.hpp  type_utils.cpp  type_utils.hpp
cpptools/_internal/: assume.hpp  debug.hpp  debug_expr.hpp  debug_log.cpp  debug_log.hpp  debug_macros.hpp  force_enable_debug.hpp  undef_debug_macros.hpp  utility_macros.hpp
cpptools/_internal/config/: debug_macros.config.hpp  undef_debug_macros.config.hpp
cpptools/cli/: argument_parsing.hpp  cli_command.hpp  cli_input.cpp  cli_input.hpp  cli_menu.hpp  cli_streams.cpp  cli_streams.hpp  command.cpp  command.hpp  command_sequence.hpp  input.cpp  input.hpp  menu.hpp  menu_command.hpp  shell.cpp  shell.hpp  streams.hpp
cpptools/container/: tree.hpp  tree_node.hpp
cpptools/container/iterator/: iterator_adapter.hpp
cpptools/container/tree/: node.hpp  node_handle.hpp  traversal.hpp  unsafe_tree.hpp
cpptools/exception/: arg_parse_exception.hpp  error_category.cpp  error_category.hpp  error_category_t.hpp  exception.cpp  exception.hpp  internal_exception.cpp  internal_exception.hpp  io_exception.cpp  io_exception.hpp  iterator_exception.cpp  iterator_exception.hpp  lookup_exception.hpp  parameter_exception.cpp  parameter_exception.hpp  range_exception.cpp  range_exception.hpp
cpptools/exceptions/: bad_syntax_error.cpp  bad_syntax_error.hpp  file_not_found_error.cpp  file_not_found_error.hpp  index_out_of_bounds_error.cpp  index_out_of_bounds_error.hpp  make_basic_exception.hpp  range_bounds_exceeded_error.cpp  range_bounds_exceeded_error.hpp  unmatched_array_size_error.cpp  unmatched_array_size_error.hpp
cpptools/math/: sine_generator.hpp
cpptools/memory/: contiguous_storage.hpp
cpptools/micro_shell/: micro_shell.hpp  micro_shell_command.hpp
cpptools/oo/: notifier.hpp
cpptools/oo/interfaces/: action_event_receiver.hpp  argument_provider.hpp  event_receiver.hpp
cpptools/parse/: token.hpp
cpptools/parse/c_preprocessor/: c_preprocessor.cpp  c_preprocessor.hpp  c_preprocessor_token_type.hpp
cpptools/platform/: sane_windows.h
cpptools/thread/: interruptible.hpp  worker.cpp  worker.hpp
cpptools/thread/interfaces/: interruptible.hpp
cpptools/utility/: attributes.hpp  bitwise_enum_ops.hpp  clamped_range.hpp  clamped_value.hpp  concepts.hpp  deduce_parameters.hpp  hash_combine.hpp  heterogenous_lookup.hpp  iterable_tools.hpp  lambda_maker.hpp  map.hpp  map_tools.hpp  merge_strategy.hpp  merging_strategy.hpp  monitored_value.hpp  predicate.hpp  ranges.hpp  string.cpp  string.hpp  string_tools.cpp  string_tools.hpp  to_string.cpp  to_string.hpp  type_traits.cpp  type_traits.hpp  type_utils.hpp  unary.hpp  wrapping_range.hpp  wrapping_value.hpp
cpptools/utility/detail/: allocator.hpp  range_base.hpp
cpptools/utility/type_traits_impl/: container_traits.hpp  detail.hpp  instance_counter.cpp  instance_counter.hpp
cpptools/utility/type_utils_impl/: container_traits.hpp  container_traits_detail.hpp  type_list.hpp
extras/: CppTools.cmake
include/catch2/: catch2.hpp
scripts/: build.sh  clean.ps1  clean.sh  generate.ps1  generate.sh  rebuild.ps1  rebuild.sh  run_clang_format.cmake
tests/: CMakeLists.txt  catch2_custom_generators.hpp  debugging_tools.cpp  debugging_tools.hpp  main.cpp
tests/cli/: cli_test_classes.cpp  cli_test_classes.hpp  test_argument_parsing.cpp  test_classes.cpp  test_classes.hpp  test_cli_command_sequence.cpp  test_cli_input.cpp  test_cli_menu.cpp  test_cli_menu_command.cpp  test_cli_streams.cpp  test_command_sequence.cpp  test_input.cpp  test_menu.cpp  test_menu_command.cpp  test_shell.cpp  test_streams.cpp
tests/container/: stress_test_tree.cpp  test_tree.cpp  test_tree_traversal.cpp  tree_test_utilities.cpp  tree_test_utilities.hpp
tests/cpptools/: test_iterable_tools.cpp  test_lambda_maker.cpp  test_string_tools.cpp
tests/cpptools/cli/: cli_test_classes.cpp  cli_test_classes.hpp  test_cli_command_sequence.cpp  test_cli_input.cpp  test_cli_menu.cpp  test_cli_menu_command.cpp  test_cli_streams.cpp
tests/cpptools/container/: test_tree.cpp
tests/cpptools/micro_shell/: shell_test_classes.hpp  test_micro_shell.cpp
tests/micro_shell/: shell_test_classes.hpp  test_micro_shell.cpp
tests/resources/cli/: int_input.txt  menu_output.txt  shell_input.txt  shell_output.txt
tests/resources/utility/string/: dummy_file.txt
tests/tools/: test_iterable_tools.cpp  test_lambda_maker.cpp  test_string_tools.cpp
tests/tools/cli/: cli_test_classes.cpp  cli_test_classes.hpp  test_cli_command_sequence.cpp  test_cli_input.cpp  test_cli_menu.cpp  test_cli_menu_command.cpp  test_cli_streams.cpp
tests/tools/micro_shell/: shell_test_classes.hpp  test_micro_shell.cpp
tests/utility/: test_bitwise_enum_ops.cpp  test_clamped_value.cpp  test_contiguous_storage.cpp  test_iterable_tools.cpp  test_lambda_maker.cpp  test_monitored_value.cpp  test_predicate.cpp  test_ranges.cpp  test_string.cpp  test_string_tools.cpp  test_wrapping_value.cpp
tools/: iterable_tools.hpp  lambda_maker.hpp  make_basic_exception.hpp  sine_generator.hpp  string_tools.cpp  tree_node.hpp
tools/cli/: cli_command.hpp  cli_input.hpp  cli_menu.hpp  cli_streams.cpp  cli_streams.hpp  command_sequence.hpp  menu_command.hpp
tools/container/: hive.hpp  tree.hpp  tree_node.hpp
tools/exceptions/: bad_syntax_error.cpp  bad_syntax_error.hpp  file_not_found_error.cpp  file_not_found_error.hpp  index_out_of_bounds_error.cpp  index_out_of_bounds_error.hpp  range_bounds_exceeded_error.cpp  range_bounds_exceeded_error.hpp  unmatched_array_size_error.cpp  unmatched_array_size_error.hpp
tools/math/: sine_generator.hpp
tools/micro_shell/: micro_shell.hpp  micro_shell_codes.hpp  (+1 more)
(+28 files in other folders)
